<resources>
    <string name="app_name">Ngopii</string>
    <string name="tombol_order">ORDER</string>
    <string name="tombol_nextorder">NEXT</string>
    <string name="tombol_ok">OK</string>
    <string-array name="daftar_menu">
        <item> Kopi Susu       --  Rp 20.000,- </item>
        <item> Caramel Latte   --  Rp 30.000,- </item>
        <item> Hazelnut Latte  --  Rp 30.000,- </item>
        <item> Vanilla Latte   --  Rp 25.000,- </item>
        <item> Latte           --  Rp 25.000,- </item>
        <item> Americano       --  Rp 15.000,- </item>
        <item> Matcha Latte    --  Rp 35.000,- </item>
        <item> Red Velvet      --  Rp 30.000,- </item>
        <item> Taro Latte      --  Rp 30.000,- </item>
        <item> Milo Machiato   --  Rp 35.000,- </item>
    </string-array>
    <string name="nama_lengkap">Nama :</string>
    <string name="no_hp">No. Handphone :</string>
    <string name="alamat">Alamat :</string>
    <string name="jk">Jenis Kelamin : </string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="to_regis">REGISTER</string>
</resources>