<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:text="@string/nama_lengkap" />

    <EditText
        android:id="@+id/nama_lengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:text="Username :" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_regis"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:text="Masukkan Password :  *enam karakter" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password_regis"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textStyle="bold"
        android:text="@string/no_hp" />

    <EditText
        android:id="@+id/no_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textStyle="bold"
        android:text="@string/jk" />

    <RadioGroup
        android:id="@+id/group_jk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/r_laki_laki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki" />

        <RadioButton
            android:id="@+id/r_perempuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perempuan" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:text="Alamat :" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_regis" />

    <TextView
        android:id="@+id/hasil_register"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:text="TextView" />

</LinearLayout>